# retro-gol

./: .gitignore  AGENTS.md  METHODS.md  README.md  main.py  pyproject.toml
calibrations/: README.md  plan_sol_cpu_overnight_v1.sh  plan_sol_cpu_scaling_v1.sh  sol_cpu_overnight_finalize_v1.slurm  sol_cpu_overnight_v1.json  sol_cpu_overnight_v1.slurm  sol_cpu_scaling_finalize_v1.slurm  sol_cpu_scaling_v1.json  sol_cpu_scaling_v1.slurm  sol_cpu_timing_v1.json  sol_cpu_timing_v1.slurm  sol_private_backup_smoke_backup_v1.slurm  sol_private_backup_smoke_v1.json  sol_private_backup_smoke_v1.slurm  submit_sol_cpu_overnight_v1.sh  submit_sol_cpu_scaling_v1.sh  submit_sol_cpu_timing_v1.sh  submit_sol_private_backup_smoke_v1.sh
configs/: first_generation_probe.json
docs/: experiment-summary.md  first-generation-probe-v2.md  sol-cpu-timing-v1.md
generations/: README.md  plan_sol_cpu_overnight_v1.sh  submit_sol_cpu_overnight_v1.sh
retro_gol/: __init__.py  __main__.py  backup.py  generate.py  overnight.py  scaling.py  simulation.py  viewer.py
tests/: test_backup.py  test_generate.py  test_overnight.py  test_scaling.py  test_simulation.py  test_viewer.py
