[project]
name = "retro-gol"
version = "0.1.0"
description = "Reproducible retrodictive-learning experiments in Conway's Game of Life"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==1.24.0",
    "numpy>=2.0,<3",
]

[project.scripts]
retroviewer = "retro_gol.viewer:main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"
